# cmake

./: CMakeLists.txt  LICENSE.md  README.md
lib/foo/: CMakeLists.txt
lib/foo/cmake/: foo-config.cmake.in
lib/foo/include/foo/: foo.h
lib/foo/src/: foo.cpp
src/bar/: CMakeLists.txt
src/bar/cmake/: bar-config.cmake.in
src/bar/include/bar/: bar.h
src/bar/src/: bar.cpp
src/baz/: CMakeLists.txt
src/baz/src/: main.cpp
